--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   
 </head>
 <body>
-    
+    <audio id="zap" src="sounds/zap.mp3"></audio>
+    <audio id="boo" src="sounds/boo.mp3"></audio>
+    <audio id="applause" src="sounds/applause.mp3"></audio>
 
-    
+    <div id="buttons"></div>
     <script src='script.js'></script>
 </body>
 </html>
